Encoder updated project graph

--- a/web/encoder-chronojump-project.conf
+++ b/web/encoder-chronojump-project.conf
@@ -22,20 +22,21 @@ debug = 0
 # Set both font size parameters to 0, set the width and height to 0
 infoBoxTitle = Chronojump encoder
 infoBoxTitleSize = 18
-infoBoxText = http://chronojump.org
 infoBoxText = GREEN: Done
 infoBoxText = ORANGE: Doing
 infoBoxText = RED: Later
-infoBoxText = 2012-May-30
+infoBoxText = http://chronojump.org
+infoBoxText = 2012-Jun-4. See complete progress here:
+infoBoxText = http://git.gnome.org/browse/chronojump/log/
 infoBoxTextSize = 12
 infoBoxFont = Liberation Sans, Arial, Helvetica
 infoBoxFontColor = #000
 infoBoxColor1 = #51b1f1
 infoBoxColor2 = #3181f1
 infoBoxX = 20
-infoBoxY = 620
-infoBoxWidth = 195
-infoBoxHeight = 100
+infoBoxY = 580
+infoBoxWidth = 260
+infoBoxHeight = 122
 
 # Slice one node name with children, ignore the rest.
 slice = 
