--- a/Makefile.include
+++ b/Makefile.include
@@ -62,7 +62,9 @@ EXTRA_DIST += $(build_sources) $(build_resx_files) $(build_others_files) $(ASSEM
 CLEANFILES += $(ASSEMBLY) $(ASSEMBLY).mdb $(BINARIES) $(build_resx_resources) $(build_satellite_assembly_list)
 DISTCLEANFILES = $(GENERATED_FILES) $(pc_files) $(BUILD_DIR)/*
 
-pkglib_SCRIPTS = $(ASSEMBLY)
+#pkglib_SCRIPTS = $(ASSEMBLY)
+chronojump_pkglibdir = $(pkglibdir)
+chronojump_pkglib_SCRIPTS = $(ASSEMBLY)
 bin_SCRIPTS = $(BINARIES)
 
 linuxdesktopapplicationsdir = @datadir@/applications
