Generate version with autotools

--- a/configure.ac
+++ b/configure.ac
@@ -128,6 +128,7 @@ libcesarplayer/Makefile
 CesarPlayer/Makefile
 CesarPlayer/AssemblyInfo.cs
 CesarPlayer/CesarPlayer.dll.config
+win32/chronojump_innosetup.iss
 ])
 
 AC_OUTPUT
