--- a/win32/chronojump_innosetup.iss.in
+++ b/win32/chronojump_innosetup.iss.in
@@ -7,7 +7,7 @@
 ; (To generate a new GUID, click Tools | Generate GUID inside the IDE.)
 AppId={{69EC15A7-5D66-4D24-A15B-1C23C0F621E0}
 AppName=Chronojump
-AppVerName=Chronojump  0.9.3
+AppVerName=Chronojump  @VERSION@
 AppPublisher=Chronojump
 AppPublisherURL=http://www.chronojump.org/
 AppSupportURL=http://www.chronojump.org/
@@ -16,14 +16,13 @@ DefaultDirName={pf}\Chronojump
 DefaultGroupName=Chronojump
 LicenseFile=.\gpl-2.0.txt
 OutputDir=.
-OutputBaseFilename=Chronojump-0.9.3
+OutputBaseFilename=Chronojump-@VERSION@
 SetupIconFile=.\chronojump_icon.ico
 Compression=lzma
 SolidCompression=yes
 
 [Languages]
 Name: "english"; MessagesFile: "compiler:Default.isl"
-Name: "basque"; MessagesFile: "compiler:Languages\Basque.isl"
 Name: "brazilianportuguese"; MessagesFile: "compiler:Languages\BrazilianPortuguese.isl"
 Name: "catalan"; MessagesFile: "compiler:Languages\Catalan.isl"
 Name: "czech"; MessagesFile: "compiler:Languages\Czech.isl"
@@ -39,7 +38,6 @@ Name: "norwegian"; MessagesFile: "compiler:Languages\Norwegian.isl"
 Name: "polish"; MessagesFile: "compiler:Languages\Polish.isl"
 Name: "portuguese"; MessagesFile: "compiler:Languages\Portuguese.isl"
 Name: "russian"; MessagesFile: "compiler:Languages\Russian.isl"
-Name: "slovak"; MessagesFile: "compiler:Languages\Slovak.isl"
 Name: "slovenian"; MessagesFile: "compiler:Languages\Slovenian.isl"
 Name: "spanish"; MessagesFile: "compiler:Languages\Spanish.isl"
 
