--- a/win32/Makefile
+++ b/win32/Makefile
@@ -4,7 +4,7 @@ deploy:
 	make install -C ../
 	mv dist/lib/bin/libcesarplayer-0.dll dist/bin
 
-bundle:
+bundle: deploy
 	windres logo.rc logo.o
 	MONO_PATH=dist/lib/chronojump mkbundle dist/lib/chronojump/Chronojump.exe --deps -c -o temp.c -oo temp.o
 	${CC} -g -o dist/bin/Chronojump.exe -Wall temp.c `pkg-config --cflags --libs mono-2`  logo.o temp.o
