Create windows installer from makefiles

--- a/win32/Makefile
+++ b/win32/Makefile
@@ -10,3 +10,6 @@ bundle: deploy
 	${CC} -g -o dist/bin/Chronojump.exe -Wall temp.c `pkg-config --cflags --libs mono-2`  logo.o temp.o
 	MONO_PATH=dist/lib/chronojump mkbundle dist/lib/chronojump/Chronojump_Mini.exe --nodeps -c -o temp.c -oo temp.o
 	${CC} -g -o dist/bin/Chronojump_mini.exe -Wall temp.c `pkg-config --cflags --libs mono-2`  logo.o temp.o
+
+installer: bundle
+	"/c/Program Files (x86)/Inno Setup 5/ISCC.exe" chronojump_innosetup.iss
