--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -355,9 +355,8 @@ REFERENCES =  \
 
 
 
-#DLL_REFERENCES =  \
-#	../nplot/nplot/bin/NPlot.dll\
-#	../nplot/nplot-gtk/bin/NPlot.Gtk.dll
+DLL_REFERENCES =  \
+	../rdotnet/R.NET/bin/Debug/RDotNet.dll
 
 
 #CLEANFILES = $(COMMONAPPLICATIONDATA_ROOT) $(COMMONAPPLICATIONDATAROOT_IMAGES) $(COMMONAPPLICATIONDATAROOT_LOGO) $(PROGRAMFILES) $(LINUX_DESKTOPAPPLICATIONS) $(BINARIES) 
