Fix windows build

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -355,8 +355,8 @@ REFERENCES =  \
 
 
 
-DLL_REFERENCES =  \
-	../rdotnet/R.NET/bin/Debug/RDotNet.dll
+#DLL_REFERENCES =  \
+#	../rdotnet/R.NET/bin/Debug/RDotNet.dll
 
 
 #CLEANFILES = $(COMMONAPPLICATIONDATA_ROOT) $(COMMONAPPLICATIONDATAROOT_IMAGES) $(COMMONAPPLICATIONDATAROOT_LOGO) $(PROGRAMFILES) $(LINUX_DESKTOPAPPLICATIONS) $(BINARIES) 
