Fix R.NET build and make it portable

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,9 +1,9 @@
-EXTRA_DIST = m4 expansions.m4
+EXTRA_DIST = build/m4 expansions.m4
 
-ACLOCAL_AMFLAGS = -I m4
+ACLOCAL_AMFLAGS = -I build/m4 -I build/m4/shave -I build/m4/shamrock
 
 SUBDIRS = chronopic-firmware \
-	encoder libcesarplayer CesarPlayer src po manual chronojump_server #rdotnet 
+	encoder libcesarplayer CesarPlayer rdotnet src po manual chronojump_server
 
 if OSTYPE_LINUX
 SUBDIRS += chronopic-tests chronojump_server
