--- a/CesarPlayer/Makefile.am
+++ b/CesarPlayer/Makefile.am
@@ -1,49 +1,9 @@
+ASSEMBLY = CesarPlayer
+TARGET = library
 
-EXTRA_DIST =  
+LINK = $(REF_DEP_CESARPLAYER)
 
-if ENABLE_DEBUG
-ASSEMBLY_COMPILER_COMMAND = $(MCS)
-ASSEMBLY_COMPILER_FLAGS =  -noconfig -codepage:utf8 -unsafe -warn:4 -optimize+ -debug -define:DEBUG
-ASSEMBLY = bin/Debug/CesarPlayer.dll
-ASSEMBLY_MDB = $(ASSEMBLY).mdb
-COMPILE_TARGET = library
-PROJECT_REFERENCES = 
-BUILD_DIR = bin/Debug
-CESARPLAYER_DLL_MDB_SOURCE=bin/Debug/CesarPlayer.dll.mdb
-CESARPLAYER_DLL_MDB=$(BUILD_DIR)/CesarPlayer.dll.mdb
-CESARPLAYER_DLL_CONFIG_SOURCE = CesarPlayer.dll.config
-CESARPLAYER_DLL_CONFIG = $(BUILD_DIR)/CesarPlayer.dll.config
-
-endif
-
-if ENABLE_RELEASE
-ASSEMBLY_COMPILER_COMMAND = $(MCS)
-ASSEMBLY_COMPILER_FLAGS =  -noconfig -codepage:utf8 -unsafe -warn:4 -optimize+ 
-ASSEMBLY = bin/Release/CesarPlayer.dll
-ASSEMBLY_MDB = $(ASSEMBLY).mdb
-COMPILE_TARGET = library
-PROJECT_REFERENCES = 
-BUILD_DIR = bin/Release
-CESARPLAYER_DLL_MDB_SOURCE=
-CESARPLAYER_DLL_MDB=
-CESARPLAYER_DLL_CONFIG_SOURCE = CesarPlayer.dll.config
-CESARPLAYER_DLL_CONFIG = $(BUILD_DIR)/CesarPlayer.dll.config
-
-
-endif
-
-AL=al2
-SATELLITE_ASSEMBLY_NAME=$(notdir $(basename $(ASSEMBLY))).resources.dll
-
-PROGRAMFILES = \
-	$(CESARPLAYER_DLL_MDB)\
-	$(CESARPLAYER_DLL_CONFIG)
-
-RESGEN=resgen2
-	
-all: $(ASSEMBLY) $(PROGRAMFILES) 
-
-FILES = \
+SOURCES = \
 	AssemblyInfo.cs \
 	gtk-gui/generated.cs \
 	Common/Constants.cs\
@@ -78,36 +38,12 @@ FILES = \
 	Utils/MediaFile.cs \
 	Utils/PreviewMediaFile.cs
 
-DATA_FILES = 
-
 RESOURCES = \
 	gtk-gui/objects.xml \
-	gtk-gui/gui.stetic 
+	gtk-gui/gui.stetic
 
-EXTRAS = \
-	cesarplayer.key\
-	CesarPlayer.dll.config\
-	AssemblyInfo.cs.in
+DLLCONFIG = CesarPlayer.dll.config
 
-REFERENCES =  \
-	System \
-	Mono.Posix \
-	System.Drawing \
-	$(GTK_SHARP_20_LIBS) \
-	$(GLIB_SHARP_20_LIBS)
+include $(top_srcdir)/build/build.mk
 
-DLL_REFERENCES = 
-
-CLEANFILES = $(PROGRAMFILES) 
-
-include $(top_srcdir)/Makefile.include
-
-$(eval $(call emit-deploy-target,CESARPLAYER_DLL_CONFIG))
-
-$(eval $(call emit_resgen_targets))
-$(build_xamlg_list): %.xaml.g.cs: %.xaml
-	xamlg '$<'
-
-$(ASSEMBLY) $(ASSEMBLY_MDB): $(build_sources) $(build_resources) $(build_datafiles) $(DLL_REFERENCES) $(PROJECT_REFERENCES) $(build_xamlg_list) $(build_satellite_assembly_list)
-	mkdir -p $(shell dirname $(ASSEMBLY))
-	$(ASSEMBLY_COMPILER_COMMAND) $(ASSEMBLY_COMPILER_FLAGS) -out:$(ASSEMBLY) -target:$(COMPILE_TARGET) $(build_sources_embed) $(build_resources_embed) $(build_references_ref)
+EXTRA_DIST += CesarPlayer.dll.config
